# test_imu_preintegration

./: CMakeLists.txt  README.md
core/: imu_preintegrator.cc  imu_preintegrator.h
test/: test_imu_preintegration_residual_only_optimization.cc
